--- a/index.html
+++ b/index.html
@@ -21,6 +21,58 @@
 
 <body>
 
+    <!-- VUE 3 -->
+    <script src="https://unpkg.com/vue@3"></script>
+
+    <div id="app" class="container py-5">
+
+        <h1 class="mb-5">
+            To-do list
+        </h1>
+
+        <div id="tasks-container" class="mb-5">
+            <!--
+                   operatori ternari:
+                   scrivere un if() in una sola riga
+                   in questo modo possiamo fare dei controlli e scrivere dei dati anche negli
+                   attributi dei nostri elementi html direttamente da qui
+           
+               -->
+            <ul v-if="tasks.length > 0" class="list-group" style="border: solid 6px transparent;" :style="
+                       {
+                           borderColor: tasks.length > 4 ? 'red' : 'transparent',
+                           borderWidth: tasks.length + 'px',
+                       }
+                   ">
+
+                <li v-for="(currentTask, index) in tasks"
+                    class="task list-group-item d-flex justify-content-between align-items-center">
+                    {{ currentTask }}
+                    <i @click="deleteTask(index)" class="fa-regular fa-square-check"></i>
+                </li>
+            </ul>
+
+            <div v-else class="bg-success p-3 text-white rounded-2 ">
+                Hai completato i task per oggi ☀️
+            </div>
+
+        </div>
+
+
+        <div id="add-task" class="py-4 ">
+            <div class="input-group mb-3">
+                <span class="input-group-text">Inserisci un nuovo task</span>
+                <input v-model="newTask" type="text" class="form-control" placeholder="Testo del task"
+                    aria-label="Testo del task" aria-describedby="add-task">
+                <button class="btn btn-outline-secondary" type="button" id="add-task" @click="addTask()">
+                    Aggiungi
+                </button>
+            </div>
+        </div>
+
+
+    </div>
+
 
 
 
