--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
             <ul class="list-group">
 
                 <li v-for="(currentTask, index) in todoList"
-                    class="task list-group-item d-flex justify-content-between align-items-center"
-                    :class=" currentTask.done == true ? 'text-decoration-line-through' : '' ">
+                    class="task list-group-item d-flex justify-content-between align-items-center">
 
-                    {{ currentTask.text }}
-                    <i class="fa-regular" :class=" currentTask.done == true ? 'fa-square-check' :  'fa-square'"></i>
+                    <span :class="{ 'text-decoration-line-through': currentTask.done }">
+                        {{ currentTask.text }}
+                    </span>
+
+                    <i class="fa-regular text-decoration-none"
+                        :class=" currentTask.done == true ? 'fa-square-check' :  'fa-square'"></i>
                 </li>
             </ul>
 
