--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
                         {{ currentTask.text }}
                     </span>
 
-                    <i class="fa-regular text-decoration-none"
-                        :class=" currentTask.done == true ? 'fa-square-check' :  'fa-square'"></i>
+                    <div class="d-flex gap-4">
+                        <i class="fa-solid fa-circle-xmark"></i>
+
+                        <i class="fa-regular text-decoration-none"
+                            :class=" currentTask.done == true ? 'fa-square-check' :  'fa-square'"></i>
+                    </div>
                 </li>
             </ul>
 
