completata funzione di aggiunta task attraverso un input

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <span class="input-group-text">Inserisci un nuovo task</span>
                 <input v-model="newTask" type="text" class="form-control" placeholder="Testo del task"
                     aria-label="Testo del task" aria-describedby="add-task">
-                <button class="btn btn-outline-secondary" type="button" id="add-task" @click="addTask()">
+                <button class="btn btn-outline-primary" type="button" id="add-task" @click="addTask()">
                     Aggiungi
                 </button>
             </div>
