--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div id="add-task" class="py-4 ">
             <div class="input-group mb-3">
                 <span class="input-group-text">Inserisci un nuovo task</span>
-                <input v-model="newTask" type="text" class="form-control" placeholder="Testo del task"
-                    aria-label="Testo del task" aria-describedby="add-task">
+                <input v-model="newTask" @keyup.enter="addTask()" type="text" class="form-control"
+                    placeholder="Testo del task" aria-label="Testo del task" aria-describedby="add-task">
                 <button class="btn btn-outline-primary" type="button" id="add-task" @click="addTask()">
                     Aggiungi
                 </button>
