Esercizio concluso - aggiunto toggle al check

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="d-flex gap-4">
                         <i @click="deleteTask(index)" class="fa-solid fa-circle-xmark"></i>
 
-                        <i class="fa-regular text-decoration-none"
+                        <i @click="currentTask.done = !currentTask.done" class="fa-regular text-decoration-none"
                             :class=" currentTask.done == true ? 'fa-square-check' :  'fa-square'"></i>
                     </div>
                 </li>
